mozmeao-fr/nucleus-prod/web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nucleus-prod
    type: web
  name: nucleus-prod
  namespace: nucleus-prod
spec:
  replicas: 5
  selector:
    matchLabels:
      app: nucleus-prod
      type: web
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nucleus-prod
        type: web
      name: nucleus-prod
      namespace: nucleus-prod
    spec:
      containers:
      - env:
        - name: ALLOWED_HOSTS
          value: "*"
        - name: CLUSTER_NAME
          value: "mozmeao-fr"
        - name: DATABASE_URL
          valueFrom:
            secretKeyRef:
              key: database-url
              name: nucleus-prod-secrets
        - name: DEBUG
          value: "False"
        - name: DISABLE_SSL
          value: "true"
        - name: HTTPS
          value: "on"
        - name: K8S_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: K8S_POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: NEW_RELIC_APP_NAME
          value: nucleus-prod-mozmeao-fr
        - name: NEW_RELIC_CONFIG_FILE
          value: /app/newrelic.ini
        - name: NEW_RELIC_LICENSE_KEY
          valueFrom:
            secretKeyRef:
              key: new-relic-license-key
              name: nucleus-prod-secrets
        - name: OIDC_ENABLE
          value: "True"
        - name: OIDC_OP_AUTHORIZATION_ENDPOINT
          value: https://auth.mozilla.auth0.com/authorize
        - name: OIDC_OP_TOKEN_ENDPOINT
          value: https://auth.mozilla.auth0.com/oauth/token
        - name: OIDC_OP_USER_ENDPOINT
          value: https://auth.mozilla.auth0.com/userinfo
        - name: OIDC_RP_CLIENT_ID
          valueFrom:
            secretKeyRef:
              key: oidc-rp-client-id
              name: nucleus-prod-secrets
        - name: OIDC_RP_CLIENT_SECRET
          valueFrom:
            secretKeyRef:
              key: oidc-rp-client-secret
              name: nucleus-prod-secrets
        - name: RNA_JSON_CACHE_TIME
          value: "120"
        - name: SAML_CREATE_USER
          value: "False"
        - name: SAML_ENABLE
          value: "True"
        - name: SAML_ENTITY_ID
          value: nucleus-prod.frankfurt.moz.works/saml2/metadata/
        - name: SAML_REMOTE_METADATA
          value: prod.xml
        - name: SAML_SSO_URL
          value: https://nucleus-prod.frankfurt.moz.works/saml2/acs/
        - name: SECRET_KEY
          valueFrom:
            secretKeyRef:
              key: secret-key
              name: nucleus-prod-secrets
        - name: SENTRY_DSN
          value: https://aac727cc239146c692afcb7ab0f2df07@o1069899.ingest.sentry.io/6260556
        image: mozmeao/nucleus:8091aba2
        imagePullPolicy: Always
        name: nucleus-prod-web
        livenessProbe:
          failureThreshold: 2
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          httpGet:
            path: /
            scheme: HTTP
            port: 8000
          timeoutSeconds: 5
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
