mozmeao-fr/nucleus-prod/ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: nucleus-prod-ingress
  namespace: nucleus-prod
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: nucleus-prod
    type: web
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt
  name: nucleus-prod
  namespace: nucleus-prod
spec:
  rules:
    - host: "nucleus.prod.fr.moz.works"
      http:
        paths:
          - backend:
              serviceName: nucleus-prod-ingress
              servicePort: 8000
            path: /
    - host: "moz.works"
      http:
        paths:
          - backend:
              serviceName: nucleus-prod-ingress
              servicePort: 8000
            path: /
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
      - hosts:
          - "nucleus.prod.fr.moz.works"
          - "nucleus.moz.works"
        secretName: nucleus-tls
